k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weechat
  namespace: weechat
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: weechat
  type: ClusterIP
